--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "bootstrap": "^5.1.1"
+    "bootstrap": "^5.1.1",
+    "tiny-slider": "^2.9.3"
   }
 }
